--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <i class="bi bi-telephone-fill"></i>
                 909-893-5505
             </button>
-            <div class="icon-bar" onclick="Ak()">
+            <div class="icon-bar" onclick="Show()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
